--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -66,6 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabGravity="fill"
+            app:tabTextColor="@color/textLight"
             app:tabMode="fixed" />
     </com.google.android.material.appbar.AppBarLayout>
 
