--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C65B39</color>
-    <color name="colorPrimaryDark">#C65B39</color>
+    <color name="colorPrimary">#2a555b</color>
+    <color name="colorPrimaryDark">#224449</color>
     <color name="colorAccent">#5F000000</color>
-    <color name="activeMain">#5E2817</color>
-    <color name="tabUnselectedIconColor">#ffffff</color>
+    <color name="activeMain">#ffffff</color>
+    <color name="tabUnselectedIconColor">#b6cccc</color>
     <color name="textLight">#ffffff</color>
     <color name="textDark">#000000</color>
     <color name="transparent">#00000000</color>
     <color name="semi_transparent_bg">#AA000000</color>
     <color name="white">#FFFFFF</color>
     <color name="active_item">#85837A7A</color>
+    <color name="card">#264e53</color>
 </resources>
