--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,8 +7,6 @@
         android:orientation="vertical"
         android:gravity="center"
         xmlns:android="http://schemas.android.com/apk/res/android">
-
-
         <ImageView
             android:layout_width="200dp"
             android:layout_height="200dp"
@@ -18,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
+            android:textColor="@color/textLight"
             android:inputType="text"
             android:maxLines="1"
             android:hint="Tài khoản"/>
@@ -25,6 +24,7 @@
             android:id="@+id/lg_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/textLight"
             android:layout_marginHorizontal="20dp"
             android:inputType="textPassword"
             android:hint="Mật khẩu"/>
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Zooo"
-            android:background="@android:color/black"
+            android:background="@color/card"
             android:textColor="@color/textLight"/>
     </LinearLayout>
     <LinearLayout
