--- a/app/src/main/res/layout/fragment_queue.xml
+++ b/app/src/main/res/layout/fragment_queue.xml
@@ -5,7 +5,7 @@
     android:layout_gravity="fill_vertical"
     android:clipToPadding="false"
     android:isScrollContainer="false"
-    android:background="@android:color/white"
+    android:background="@color/background"
     android:orientation="vertical"
     android:paddingBottom="@dimen/footer_height"
     android:paddingTop="65dp"
