Catch error retrofit

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -29,7 +29,7 @@
             android:inputType="textPassword"
             android:hint="Mật khẩu"/>
         <Button
-            android:id="@+id/lg_btn"
+            android:id="@+id/signup_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Đăng ký"
