--- a/app/src/main/res/layout/fragment_song_search.xml
+++ b/app/src/main/res/layout/fragment_song_search.xml
@@ -4,6 +4,15 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
+    <TextView
+        android:id="@+id/tv_no_data"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="Không có bài hát phù hợp"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:visibility="invisible" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/re_song_search"
         android:layout_marginTop="10dp"
