--- a/app/src/main/res/layout/fragment_lyric_cs.xml
+++ b/app/src/main/res/layout/fragment_lyric_cs.xml
@@ -17,6 +17,8 @@
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/lyric_tv"
+            android:textColor="@color/textLight"
+            android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </ScrollView>
