Add no lyric noti

--- a/app/src/main/res/layout/fragment_lyric_cs.xml
+++ b/app/src/main/res/layout/fragment_lyric_cs.xml
@@ -18,7 +18,7 @@
         <TextView
             android:id="@+id/lyric_tv"
             android:textColor="@color/textLight"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </ScrollView>
