--- a/app/src/main/res/layout/fragment_queue.xml
+++ b/app/src/main/res/layout/fragment_queue.xml
@@ -7,7 +7,7 @@
     android:isScrollContainer="false"
     android:background="@color/background"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/footer_height"
+    android:paddingBottom="75dp"
     android:paddingTop="65dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
