--- a/app/src/main/res/layout/activity_current_song.xml
+++ b/app/src/main/res/layout/activity_current_song.xml
@@ -138,6 +138,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:orientation="horizontal">
             <TextView
                 android:id="@+id/cs_time"
